--- a/OmneFictio.Web/Views/Home/Post.cshtml
+++ b/OmneFictio.Web/Views/Home/Post.cshtml
@@ -45,23 +45,21 @@
             <button type="button">Share</button>
             <button type="button">Report</button>
         </div>
-        <div class="p-details">
-            <div class="pd-items">
-                <span>Story</span>
-                <span>English</span>
-                <span>On-going</span>
-            </div>
-            <div class="pd-series">
-                <span>Harry Potter</span>
-                <span>Pirates</span>
-            </div>
-            <div class="pd-tags">
-                <span>Action</span>
-                <span>Comedy</span>
-                <span>Fantasy</span>
-                <span>Romance</span>
-                <span>Dram</span>
-            </div>
+        <div class="pd-items">
+            <span>Story</span>
+            <span>English</span>
+            <span>On-going</span>
+        </div>
+        <div class="pd-series">
+            <span>Harry Potter</span>
+            <span>Pirates</span>
+        </div>
+        <div class="pd-tags">
+            <span>Action</span>
+            <span>Comedy</span>
+            <span>Fantasy</span>
+            <span>Romance</span>
+            <span>Dram</span>
         </div>
     </div>
     
@@ -72,7 +70,7 @@
 </div>
 
 <div class="chapter_selection">
-    <button>Chapters</button>
+    <a href="#">Chapters</a>
     <a href="#">Open all</a>
 </div>
 
