--- a/OmneFictio.Web/wwwroot/css/site.css
+++ b/OmneFictio.Web/wwwroot/css/site.css
@@ -84,6 +84,7 @@
 /*----------SETTINGS---------*/
 html {
   font-size: 14px;
+  color: var(--text-color1);
   position: relative;
   height: 100%;
 }
