--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -3,6 +3,7 @@
 /*----------SETTINGS---------*/
 html {
     font-size: 14px;
+    color: var(--text-color1);
     position: relative;
     height: 100%;
 }
