--- a/OmneFictio.Web/Views/Home/Post.cshtml
+++ b/OmneFictio.Web/Views/Home/Post.cshtml
@@ -26,15 +26,17 @@
             </div>
         </div>
         <div class="p-footer">
-            <div class="p-evaluation">
-                <i class="bi bi-hand-thumbs-up post-vote p-likebtn" data-action="like"></i>
-                <span class="p-likes">5432</span>
-                <i class="bi bi-hand-thumbs-down post-vote p-dislikebtn" data-action="dislike"></i>
-                <span class="p-rate">8/10</span>
-            </div>
-            <div class="p-user">
-                <span class="p-username">MrBombastic</span>
-                <img src="/images/users/user_no_photo_300x300.png">
+            <div class="p-footer-wrap">
+                <div class="p-evaluation">
+                    <i class="bi bi-hand-thumbs-up post-vote p-likebtn" data-action="like"></i>
+                    <span class="p-likes">5432</span>
+                    <i class="bi bi-hand-thumbs-down post-vote p-dislikebtn" data-action="dislike"></i>
+                    <span class="p-rate">8/10</span>
+                </div>
+                <div class="p-user">
+                    <span class="p-username">MrBombastic</span>
+                    <img src="/images/users/user_no_photo_300x300.png">
+                </div>
             </div>
         </div>
     </div>
@@ -80,13 +82,13 @@
 </div>
 
 <div class="add_comment-cont">
-    <input type="text" placeholder="This is where we comment.">
+    <textarea placeholder="This is where we comment."></textarea>
     <div class="ac-footer">
         <div class="ac-user">
             <img src="/images/users/user_no_photo_300x300.png">
             <span class="ac-username">MrBombastic</span>
         </div>
-        <a href="#">Send</a>
+        <a href="#" class="comment-btn">Send</a>
     </div>
 </div>
 
